changed the file a bit

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 2 <html>
 3     <head> 
 4         <title>      
-5             Title Text
+5             Tabo jain's website
 6         </title>
 7         <meta charset="utf-8"/>
 8     </head>
 9     <body>
 10        <h1>
-11            A heading
+11            Welcome ladies and gentlemen
 12        </h1>
 13        <p>
-14           Paragraph text.
+14           This is my website! get it.
 15        </P>
 16      </body>
 17 </html>
