--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 2 <html>
 3     <head> 
 4         <title>      
-5             Tabo jain's website
+5             Title text
 6         </title>
 7         <meta charset="utf-8"/>
 8     </head>
 9     <body>
 10        <h1>
-11            Welcome ladies and gentlemen
+11            A heading
 12        </h1>
 13        <p>
-14           This is my website! get it.
+14           Paragraph text.
 15        </P>
 16      </body>
 17 </html>
