--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 2 <html>
 3     <head> 
 4         <title>      
-5             Title text
+5             Tabo's web page
 6         </title>
 7         <meta charset="utf-8"/>
 8     </head>
 9     <body>
-10        <h1>
-11            A heading
-12        </h1>
-13        <p>
-14           Paragraph text.
-15        </P>
-16      </body>
-17 </html>
+10       <header>
+11        <h1>
+12            Welcome to my website!
+13        </h1>
+14       <footer>
+15        <p>
+16           This website is being by me for my studies in cmis.
+17        </p>
+18         </footer>
+19       </header>
+20      </body>
+21 </html>
