--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-1 <!DOCTYPE html>
-2 <html>
-3     <head> 
-4         <title>      
-5             Tabo's web page
-6         </title>
-7         <meta charset="utf-8"/>
-8     </head>
-9     <body>
-10       <header>
-11        <h1>
-12            Welcome to my website!
-13        </h1>
-14       <footer>
-15        <p>
-16           This website is being by me for my studies in cmis.
-17        </p>
-18         </footer>
-19       </header>
-20      </body>
-21 </html>
+ <!DOCTYPE html>
+ <html>
+     <head> 
+         <title>      
+             Tabo's web page6
+         </title>
+         <meta charset="utf-8"/>
+     </head>
+     <body>
+       <header>
+        <h1>
+            Welcome to my website!
+        </h1>
+       <footer>
+        <p>
+           This website is being by me for my studies in cmis.
+        </p>
+         </footer>
+       </header>
+      </body>
+ </html>
