--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
  <html>
-     <head> 
+     <head> <link rel="stylesheet" href="main.css" type="text/css">
          <title>      
              Tabo's web page6
          </title>
