--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
  <html>
-     <head> <link rel="stylesheet" href="main.css" type="text/css">
+     <head><link rel="stylesheet" href="main.css" type="text/css">
          <title>      
              Tabo's web page6
          </title>
@@ -8,15 +8,17 @@
      </head>
      <body>
        <header>
-        <h1>
             Welcome to my website!
-        </h1>
        </header>
+            <header2>
+                   hope you like the site 
+            </header2>
+       <nav>
+       </nav>
+       <main>
+       </main>
        <footer>
-        <p>
-           This website is being by me for my studies in cmis.
-        </p>
-         </footer>
-       
+            This website is being by me for my studies in cmis
+       </footer>
       </body>
  </html>
