--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
              Tabo's web page6
          </title>
          <meta charset="utf-8"/>
-       <header>
-            Welcome to my website!
-       </header>
-            <header2>
-                   hope you like the site 
-            </header2>
      </head>
       <body>
+       <header>
+            Welcome to my website!
+            hope you like my site
+       </header> 
        <nav>
        </nav>
        <main>
