--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -10,13 +10,43 @@
     <header>
     </header>
      <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+          Add a blank gedit index.html file in your repository
+        </li>
+        <li>
+          Fill the file with some text and for stylesheets add main.css 
+        </li>
+        <li>
+          In main.css add a border,font-style,etc.       
+        </li>
+        <li>
+           After this validate your index.html and main.css file.
+	</li>
+	<li>
+	   To view your inex.html file type in localhost:8000 for a       specific file in your repository type /filename
+	</li>
+        <li>
+	  Done with all listed above then open sftp with terminal. 
+	</li>
+        <li>
+	  In sftp cd into public_html.          
+	</li>
+        <li>
+	  Now put index.html and main.css into sftp.
+	</li>
+        <li>
+          To view in sftp type cmis-hsteacher/~username/ for specific file same as before.
+        <li>
+          Voila! your done. 
+	</li>
      </ol>
     <nav>
     </nav>
     <main>
+     <ul>
+        <li>
+          <a href="w3schools.com">
+     </ul>
     </main>
     <footer>
     </footer>
