--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             hope you like my site
        </header> 
        <nav>
+         <ul>
+          <li>
+            <a href="listsandlinks">future</a>
        </nav>
        <main>
        </main>
