--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -1,14 +1,20 @@
-<!doctypt html>
+<!doctype html>
 <html>
    <head>  
     <title>
-         Title text    
+         Hi  
     </title>
       <meta charset="utf-8"/>
    </head>
    <body>
     <header>
     </header>
+      <h1>
+    This assignment was about creating a subfolder and adding different links to different websites and adding a link in both index files back to each other very confusing i know deal with it.
+       </h1>
+       <p>
+         The hardwork isnt wasted this shall help me a lot in the future bye for now..........goodbye!
+       </p>
      <ol>
         <li>
           Add a blank gedit index.html file in your repository
@@ -41,14 +47,52 @@
 	</li>
      </ol>
     <nav>
+     <ul>
+       <li>
+          <a href="..">back to the</a>
+       </li>
+     </ul>
     </nav>
     <main>
      <ul>
         <li>
-          <a href="w3schools.com">
+         <a href="http://www.w3schools.com/">very Helpful</a>
+        </li>
+        <li>
+         <a href="http://www.echoecho.com/helpful">here</a>
+        </li>
+        <li>
+          <a href="http://shell.cas.usf.edu/">click!</a>
+        </li>
+        <li>
+         <a href="http://www.htmlgoodies.com/">click it!</a>
+        </li>
+        <li>
+         <a href="https://wordpress.org/">click here plz!</a>
+        </li>
      </ul>
     </main>
     <footer>
+         <ul>
+          <li>Create a new folder called "listsandlinks" in your repository folder.
+          </li>
+          <li>Inside listsandlinks create a file called "index.html" and a file called "main.css"
+          </li>
+          <li>In index.html create an ordered list of step by step instructions to create a new webpage on the production server.
+          </li>
+          <li>Also create an unordered list of 5 or more links to websites with useful webdesign related information.
+          </li>
+	  <li>In the nav section, create an unordered list of links with a link back to your main index page.
+          </li>
+	  <li>In your main index.html file in public_html, add an unordered list of links to the nav section with a link to "listsandlinks".
+          </li>
+          <li>Add an article with a heading and a paragraph description of this assignment.
+          </li> 
+	  <li>Also add an unordered list that contains this list of      requirements.
+	  </li> 
+          <li>Turn in your work.
+          </li>
+        </ul>
     </footer>
    </body>
 </html>
