--- a/tables/index.html
+++ b/tables/index.html
@@ -1,26 +1,95 @@
-<!doctypt html>
+<!doctype html>
 <html>
  <head>
    <title>
-              
+       help!       
    </title>
        <meta charset="utf-8"/>
  </head><link rel="stylesheet" href="main.css" type="text/css">
        <body>
          <header>
+              Tables
          </header>
-         <thead>
+         <table border="1">
+              <thead>
+                numbers
+              </thead>
               <tr>
-                <td colspan="2"></td>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
               </tr>
+              <tr>
+                <td>9</td>
+                <td>8</td>
+                <td>7</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>5</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+              </tr>  
+         </table>
+         <table border="1">
+           <tr>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>8</td>
+                <td>7</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>5</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td colspan="3">created by tabo</td>
+              </tr>
+             </table>
+             <table border="1">
+           <tr>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>8</td>
+                <td>7</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>5</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td rowsapn="3">hello</td>
+               <tr>
+             </table>    
+         <thead>
          </thead>
          <tbody>
-              <tr>
-              </tr>
          </tbody>
          <tfoot>
-              <tr>
-              </tr>
          </tfoot> 
          <nav>
          </nav>
