--- a/tables/index.html
+++ b/tables/index.html
@@ -5,15 +5,16 @@
        help!       
    </title>
        <meta charset="utf-8"/>
- </head><link rel="stylesheet" href="main.css" type="text/css">
+       <link rel="stylesheet" href="main.css" type="text/css">
+ </head>
        <body>
          <header>
               Tables
          </header>
+              <h1>
+                Simple Grid
+              </h1>
          <table border="1">
-              <thead>
-                numbers
-              </thead>
               <tr>
                 <td>A</td>
                 <td>B</td>
@@ -35,56 +36,57 @@
                 <td>1</td>
               </tr>  
          </table>
+           <h2>
+              Calender
+           </h2>
          <table border="1">
-           <tr>
+              <tr>
                 <td>A</td>
                 <td>B</td>
                 <td>C</td>
+                <td>D</td>
               </tr>
               <tr>
                 <td>9</td>
                 <td>8</td>
                 <td>7</td>
+                <td>0</td>
               </tr>
               <tr>
                 <td>6</td>
                 <td>5</td>
                 <td>4</td>
+                <td>0</td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>2</td>
                 <td>1</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td colspan="3">created by tabo</td>
+                <td colspan="4">created by tabo</td>
               </tr>
              </table>
-             <table border="1">
-           <tr>
-                <td>A</td>
-                <td>B</td>
-                <td>C</td>
+              <h3>
+             Class Schedule
+              </h3>
+           <table border="1">
+              <tr>
+                <td colspan="4">A</td>
+                <td colspan="4">B</td>
               </tr>
               <tr>
-                <td>9</td>
-                <td>8</td>
-                <td>7</td>
+                <td rowspan="2">hello</td>
               </tr>
               <tr>
-                <td>6</td>
-                <td>5</td>
-                <td>4</td>
+                <td colspan="4">9</td>
               </tr>
               <tr>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
+                <td rowspan="2">hello</td>
+                <td colspan="4">5</td>
               </tr>
-              <tr>
-                <td rowsapn="3">hello</td>
-               <tr>
-             </table>    
+           </table>    
          <thead>
          </thead>
          <tbody>
@@ -92,10 +94,13 @@
          <tfoot>
          </tfoot> 
          <nav>
+           <a href="..">home</a>
+           <a href="listsandlinks"></a>
          </nav>
          <main>
          </main>
          <footer>
+              Hey!
          </footer>
        </body>
 </html>
