--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
          <ul>
           <li>
             <a href="listsandlinks">future</a>
+          </li>
+          <li>
+            <a href="tables">present</a>
+          </li>
+         </ul>
        </nav>
        <main>
        </main>
