--- a/tables/index.html
+++ b/tables/index.html
@@ -94,8 +94,14 @@
          <tfoot>
          </tfoot> 
          <nav>
+          <ul>
+           <li>
            <a href="..">home</a>
-           <a href="listsandlinks"></a>
+           </li>
+           <li>
+           <a href="listsandlinks">Second home</a>
+           </li>
+          </ul>
          </nav>
          <main>
          </main>
