--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -51,6 +51,9 @@
        <li>
           <a href="..">back to the</a>
        </li>
+       <li>
+          <a href="tables">present</a>
+       </li>
      </ul>
     </nav>
     <main>
