--- a/tables/index.html
+++ b/tables/index.html
@@ -99,14 +99,13 @@
            <a href="..">home</a>
            </li>
            <li>
-           <a href="listsandlinks">Second home</a>
+           <a href="../listsandlinks">Second home</a>
            </li>
           </ul>
          </nav>
          <main>
          </main>
          <footer>
-              Hey!
          </footer>
        </body>
 </html>
