--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -52,7 +52,7 @@
           <a href="..">back to the</a>
        </li>
        <li>
-          <a href="tables">present</a>
+          <a href="../tables">present</a>
        </li>
      </ul>
     </nav>
