--- a/tables/index.html
+++ b/tables/index.html
@@ -11,89 +11,7 @@
          <header>
               Tables
          </header>
-              <h1>
-                Simple Grid
-              </h1>
-         <table border="1">
-              <tr>
-                <td>A</td>
-                <td>B</td>
-                <td>C</td>
-              </tr>
-              <tr>
-                <td>9</td>
-                <td>8</td>
-                <td>7</td>
-              </tr>
-              <tr>
-                <td>6</td>
-                <td>5</td>
-                <td>4</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-              </tr>  
-         </table>
-           <h2>
-              Calender
-           </h2>
-         <table border="1">
-              <tr>
-                <td>A</td>
-                <td>B</td>
-                <td>C</td>
-                <td>D</td>
-              </tr>
-              <tr>
-                <td>9</td>
-                <td>8</td>
-                <td>7</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>6</td>
-                <td>5</td>
-                <td>4</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td colspan="4">created by tabo</td>
-              </tr>
-             </table>
-              <h3>
-             Class Schedule
-              </h3>
-           <table border="1">
-              <tr>
-                <td colspan="4">A</td>
-                <td colspan="4">B</td>
-              </tr>
-              <tr>
-                <td rowspan="2">hello</td>
-              </tr>
-              <tr>
-                <td colspan="4">9</td>
-              </tr>
-              <tr>
-                <td rowspan="2">hello</td>
-                <td colspan="4">5</td>
-              </tr>
-           </table>    
-         <thead>
-         </thead>
-         <tbody>
-         </tbody>
-         <tfoot>
-         </tfoot> 
-         <nav>
+          <nav>
           <ul>
            <li>
            <a href="..">home</a>
@@ -103,6 +21,99 @@
            </li>
           </ul>
          </nav>
+              <h1>
+                Simple Grid
+              </h1>
+         <table border="1">
+          <thead>
+              <tr>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                <td>9</td>
+                <td>8</td>
+                <td>7</td>
+              </tr>
+              <tr>
+                 <td>6</td>
+                 <td>5</td>
+                 <td>4</td>
+               </tr>
+          </tbody>
+          <tfoot>
+              <tr>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+              </tr>
+          </tfoot>
+         </table>
+           <h2>
+              Calender
+           </h2>
+         <table border="1">
+           <thead>
+              <tr>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+                <td>D</td>
+              </tr>
+           </thead>
+           <tbody>
+              <tr>
+                <td>9</td>
+                <td>8</td>
+                <td>7</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>5</td>
+                <td>4</td>
+                <td>0</td>
+              </tr>
+           </tbody>
+           <tfoot>
+              <tr>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td colspan="4">Created By:who knows?</td>
+           </tfoot>
+          </table>
+              <h3>
+             Class Schedule
+              </h3>
+           <table border="1">
+            <thead>
+              <tr>
+                <td colspan="3">A</td>
+                <td>B</td>
+                <td>C</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="3">9</td>
+                <td>5</td>
+                <td>6</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="3">9</td>
+                <td>5</td>
+                <td>6</td>
+              </tr>
+           </table>    
          <main>
          </main>
          <footer>
