--- a/tables/index.html
+++ b/tables/index.html
@@ -1,122 +1,219 @@
 <!doctype html>
 <html>
- <head>
-   <title>
-       help!       
-   </title>
-       <meta charset="utf-8"/>
-       <link rel="stylesheet" href="main.css" type="text/css">
- </head>
-       <body>
-         <header>
-              Tables
-         </header>
-          <nav>
-          <ul>
-           <li>
-           <a href="..">home</a>
-           </li>
-           <li>
-           <a href="../listsandlinks">Second home</a>
-           </li>
-          </ul>
-         </nav>
-              <h1>
-                Simple Grid
-              </h1>
-         <table border="1">
-          <thead>
-              <tr>
-                <td>A</td>
-                <td>B</td>
-                <td>C</td>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                <td>9</td>
-                <td>8</td>
-                <td>7</td>
-              </tr>
-              <tr>
-                 <td>6</td>
-                 <td>5</td>
-                 <td>4</td>
-               </tr>
-          </tbody>
-          <tfoot>
-              <tr>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-              </tr>
-          </tfoot>
-         </table>
-           <h2>
-              Calender
-           </h2>
-         <table border="1">
-           <thead>
-              <tr>
-                <td>A</td>
-                <td>B</td>
-                <td>C</td>
-                <td>D</td>
-              </tr>
-           </thead>
-           <tbody>
-              <tr>
-                <td>9</td>
-                <td>8</td>
-                <td>7</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>6</td>
-                <td>5</td>
-                <td>4</td>
-                <td>0</td>
-              </tr>
-           </tbody>
-           <tfoot>
-              <tr>
-                <td>3</td>
-                <td>2</td>
-                <td>1</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td colspan="4">Created By:who knows?</td>
-           </tfoot>
-          </table>
-              <h3>
-             Class Schedule
-              </h3>
-           <table border="1">
-            <thead>
-              <tr>
-                <td colspan="3">A</td>
-                <td>B</td>
-                <td>C</td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td colspan="3">9</td>
-                <td>5</td>
-                <td>6</td>
-              </tr>
-            </tbody>
-            <tfoot>
-              <tr>
-                <td colspan="3">9</td>
-                <td>5</td>
-                <td>6</td>
-              </tr>
-           </table>    
-         <main>
-         </main>
-         <footer>
-         </footer>
-       </body>
+	<head>
+		<meta charset="utf-8"/>
+		<title>
+                  HEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEY!
+		</title>
+		<link rel="stylesheet" href="main.css" type="text/css">
+	</head>
+	<body>
+		<nav>
+			<ul>
+				<li>
+					<a href="..">Home</a>
+				</li>
+				<li>
+					<a href="../listsandlinks">Lists and Links</a>
+				</li>
+			</ul>
+		</nav>
+		<header>
+			<h1>
+                           Tables
+			</h1>
+		</header>
+		<main>
+			<article>
+				<h2>
+                                  Simple Grid
+				</h2>
+				<table border="1">
+					<tr>
+						<th>1
+						</th>
+						<th>2
+						</th>
+						<th>3
+						</th>
+					</tr>
+					<tr>
+						<td>4
+						</td>
+						<td>5
+						</td>
+						<td>6
+						</td>
+					</tr>
+					<tr>
+						<td>7
+						</td>
+						<td>8
+						</td>
+						<td>9
+						</td>
+					</tr>
+					<tr>
+						<td>10
+						</td>
+						<td>11
+						</td>
+						<td>12
+						</td>
+					</tr>
+					<tr>
+						<td>13
+						</td>
+						<td>14
+						</td>
+						<td>15
+						</td>
+					</tr>
+				</table>
+				<h2>
+                                  Calender
+				</h2>
+				<table border="1">
+					<tr>
+						<th colspan="7">December 2015
+						</th>
+					</tr>
+					<tr>
+						<th>Mon
+						</th>
+						<th>Tue
+						</th>
+						<th>Wed
+						</th>
+						<th>Thur
+						</th>
+						<th>Fri 
+						</th>
+						<th>Sat
+						</th>
+						<th>Sun
+						</th>
+					</tr>
+					<tr>
+						<td>1
+						</td>
+						<td>2
+						</td>
+						<td>3
+						</td>
+						<td>4
+						</td>
+						<td>5
+						</td>
+						<td>6
+						</td>
+						<td>7
+						</td>
+					</tr>
+					<tr>
+						<td>8
+						</td>
+						<td>9
+						</td>
+						<td>10
+						</td>
+						<td>11
+						</td>
+						<td>12
+						</td>
+						<td>13
+						</td>
+						<td>14
+						</td>
+					</tr>
+					<tr>
+						<td>15
+						</td>
+						<td>16
+						</td>
+						<td>17
+						</td>
+						<td>18
+						</td>
+						<td>19
+						</td>
+						<td>20
+						</td>
+						<td>21
+						</td>
+					</tr>
+					<tr>
+						<td>22
+						</td>
+						<td>23
+						</td>
+						<td>24
+						</td>
+						<td>25
+						</td>
+						<td>26
+						</td>
+						<td>27
+						</td>
+						<td>28
+						</td>
+					</tr>
+					<tr>
+						<td>29
+						</td>
+						<td>30
+						</td>
+						<td>31
+						</td>
+						<td>32
+						</td>
+						<td>33
+						</td>
+						<td>34
+						</td>
+						<td>35
+						</td>
+					</tr>
+					<tr>
+						<td colspan="7"> Created by:Who knows?
+						</td>
+					</tr>
+				</table>
+				<h3>
+                                  Class Schedule
+				</h3>
+				<table border="1">
+					<tr>
+						<th>Period
+						</th>
+						<th>Class info
+						</th>
+					</tr>
+					<tr>
+						<th rowspan="2">1 
+						</th>
+						<td>Mr.kieffer
+						</td>
+					</tr>
+					<tr>
+						<td>Computer science
+						</td>
+					</tr>
+					<tr>
+						<th rowspan="2">2
+						</th>
+						<td>Mr.knox
+						</td>
+					</tr>
+					<tr>
+						<td>History
+						</td>
+					</tr>
+				</table>
+			</article>
+                </main>
+		<footer>
+                  2015 Tabo V Jain-cmis Web Design
+		</footer>
+	</body>
 </html>
