--- a/index.html
+++ b/index.html
@@ -22,6 +22,47 @@
          </ul>
        </nav>
        <main>
+       <article>
+ <h1>
+   Tables
+ </h1>
+   <p>
+   This list of requirments is for my tables assingment in my computer classes at cmis international.
+   </p>
+        <ul>
+         <li>
+Create a new folder in your repository called "tables"
+         </li>
+	<li>
+       In the "tables" folder, create a new file called from your template "index.html"
+         </li>
+	<li>
+   Be sure to use thead, tbody, and tfoot elements in your tables.
+         </li>
+	<li>
+Add html code to recreate the webpage below
+       <ul>
+         <li>
+          second table will require the use of the colspan attribute.
+         </li>
+         <li>
+third table will require the use of the rowspan attribute.
+         </li>
+      </ul>
+         </li>
+	<li>
+            In your repository index.html file, add an article with a heading, paragraph description and this list of requirements. Also add a link to the tables/index.html file. 
+         </li>
+	<li>
+Add a link from lists and links to this assignment as well.
+         </li>
+	<li>
+Validate your code.
+         </li>
+	<li>
+Turn it in.
+         </li>
+        </ul>
        </main>
        <footer>
             This website is being by me for my studies in cmis
