--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
           <li>
             <a href="tables">present</a>
           </li>
+          <li>
+            <a href="box.css">stlyish</a>
          </ul>
        </nav>
        <main>
