--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -54,6 +54,9 @@
        <li>
           <a href="../tables">present</a>
        </li>
+       <li>
+          <a href="../box.css">styles</a>
+       </li>
      </ul>
     </nav>
     <main>
