--- a/tables/index.html
+++ b/tables/index.html
@@ -16,6 +16,9 @@
 				<li>
 					<a href="../listsandlinks">Lists and Links</a>
 				</li>
+                                <li>
+                                        <a href="../box.css">stlesjd</a>
+                                </li>
 			</ul>
 		</nav>
 		<header>
