--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="tables">present</a>
           </li>
           <li>
-            <a href="box.css">stlyish</a>
+            <a href="css/box.css">stlyish</a>
          </ul>
        </nav>
        <main>
