--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -55,7 +55,7 @@
           <a href="../tables">present</a>
        </li>
        <li>
-          <a href="../box.css">styles</a>
+          <a href="../css/box.css">styles</a>
        </li>
      </ul>
     </nav>
