--- a/tables/index.html
+++ b/tables/index.html
@@ -17,7 +17,7 @@
 					<a href="../listsandlinks">Lists and Links</a>
 				</li>
                                 <li>
-                                        <a href="../box.css">stlesjd</a>
+                                        <a href="../css/box.css">stlesjd</a>
                                 </li>
 			</ul>
 		</nav>
