--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
  <html>
-     <head><link rel="stylesheet" href="main.css" type="text/css">
+     <head><link rel="stylesheet" href="css/box.css" type="text/css">
          <title>      
              Tabo's web page6
          </title>
@@ -24,10 +24,43 @@
          </ul>
        </nav>
        <main>
+<article>
+<h1>
+  ListsandLinks
+</h1>
+<p>
+this list of requirments is for my listsandlinks siingment in my computer lasses at cmis international.
+</p>
+<ul>
+         <li>
+Create a new folder called "listsandlinks" in your repository folder.
+         </li>
+	<li>
+       Inside listsandlinks create a file called "index.html" and a file called "main.css"
+         </li>
+	<li>
+  In index.html create an ordered list of step by step instructions to create a new webpage on the production server.
+         </li>
+	<li>
+Also create an unordered list of 5 or more links to websites with useful webdesign related information.
+         </li>
+	<li>
+            In the nav section, create an unordered list of links with a link back to your main index page.
+         </li>
+	<li>
+In your main index.html file in public_html, add an unordered list of links to the nav section with a link to "listsandlinks".
+         </li>
+	<li>
+In your old index.html, add an article with a heading and a paragraph description of this assignment. Also add an unordered list that contains this list of requirements. 
+         </li>
+	<li>
+Turn in your work
+         </li>
+        </ul>
        <article>
- <h1>
+ <h2>
    Tables
- </h1>
+ </h2>
    <p>
    This list of requirments is for my tables assingment in my computer classes at cmis international.
    </p>
