--- a/final/index.html
+++ b/final/index.html
@@ -8,14 +8,30 @@
            <link rel="stylesheet" href="final.css" type="text/css">
        </head>
        <body>
-         <header>
-   
-         </header>
+         <h1>
+             Tabo Jain's Store 
+         </h1>
                <nav>
+                <ul>
+                 <li>
+                  <a href="..">Home</a>
+                 </li>
+                 <li>
+                  <a href="../final/catalog.html">Store Catalog</a>
+                 </li>
+                </ul>
                </nav>
                 <main>
+               <h2>
+                 Welcome hope you enjoy browsing through our merchandise!
+               </h2>
+                <p>
+                   Tabo Jain's store is a site which sells electronic devices where you can buy Movies,headphones,tablets,Cellular devices anything just name it.
+                </p>
+              <img src="" alt="For your shopping needs" style="width=px;heightpx;">    
                </main>
                <footer>
+                  @2015 Tabo Jain - CMIS Web Design Student
                </footer>
        </body>
 </html>
