--- a/final/catalog.html
+++ b/final/catalog.html
@@ -9,11 +9,23 @@
        </head>
        <body>
          <header>
-   
+               
          </header>
                <nav>
+                 <ul>
+                  <li>
+                  <a href="../final">Website home</a>
+                  </li>
+                  <li>
+		  <a href="..">Final home</a>
+                  </li>
+                 </ul>
                </nav>
                 <main>
+                 <h1>
+                   Headphones
+                 </h1>
+                 <img src=
                </main>
                <footer>
                </footer>
