--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           </li>
           <li>
             <a href="css/box.css">stlyish</a>
+          </li>
+          <li>
+            <a href="final">E-commerce website</a>
+          </li>
          </ul>
        </nav>
        <main>
