--- a/final/catalog.html
+++ b/final/catalog.html
@@ -23,9 +23,33 @@
                </nav>
                 <main>
                  <h1>
-                   Headphones
+                   Products
                  </h1>
-                 <img src=
+                 <img src="" alt="High bass ouput and excellent audio quality" style=width:px;height:px;">
+                 <p>
+                  Headphones for sale they have been tested properly and these babies will give you an eargasm!
+                 </p>
+                <img src="" alt="There's actually no point in buying this theyre gonna release a new one" style=width:px;height:px;">
+                 <p>
+                  Iphone 6 It has dual-core processor the old apple layout but still leaving room for customization.
+                 </p>
+                <img src="" alt="All oscar Awarded movies" style=width:px;height:px;">
+                 <p>
+                   This Movie Collection includes:-
+                   
+                 </p>
+                <img src="" alt="For Blasting music" style=width:px;height:px;">
+                 <p>
+                   Stereo for irritating your neighbours and throwing some awesome house partys!
+                 </p>
+                <img src="" alt="New fast-paced First-person Shooter" style=width:px;height:px;">
+                 <p>
+                   COD:Black Ops III is the latest addition to the call Of Duty Franchise this is definatly one of the best yet wiht the new zombies story mode where you can turn into a monster squid what more do you want!!!
+                 </p>
+                 <img src="" alt="Built for gaming" style=width:px;height:px;">
+                 <p>
+                   This pc is bulit for gamers and absolutely no lagging at all and has one of the best graphic engines ever.You'll enjoy playing games on this one!   
+                 </p>
                </main>
                <footer>
                </footer>
