--- a/final/index.html
+++ b/final/index.html
@@ -26,9 +26,15 @@
                  Welcome hope you enjoy browsing through our merchandise!
                </h2>
                 <p>
-                   Tabo Jain's store is a site which sells electronic devices where you can buy Movies,headphones,tablets,Cellular devices anything just name it.
+                   Tabo Jain's store is a site which sells electronic devices where you can buy Movies,headphones,tablets,Cellular devices,video games anything just name it.
                 </p>
-              <img src="" alt="For your shopping needs" style="width=px;heightpx;">    
+              <img src="" alt="For your shopping needs" style="width=px;heightpx;">
+                <h2>
+                 Products
+                </h2>
+                <p>
+               We sell all elctronic devices,Movies,anime,comic books(only dc and marvel),Gaming console's,Video games on Xbox one,ps3,ps4,nintendo,Controller for all the mentioned consoles(with custom paint if you want) 
+                </p>  
                </main>
                <footer>
                   @2015 Tabo Jain - CMIS Web Design Student
