--- a/final/catalog.html
+++ b/final/catalog.html
@@ -5,7 +5,7 @@
               
                 </title>
                 <meta charset="utf-8"/>
-           <link rel="stylesheet" href="" type="text/css">
+           <link rel="stylesheet" href="final.css" type="text/css">
        </head>
        <body>
          <header>
