--- a/final/index.html
+++ b/final/index.html
@@ -2,15 +2,15 @@
 <html>
     <head>
          <title>
-             
+             Tabo Jain's Store
          </title>
                 <meta charset="utf-8"/>
            <link rel="stylesheet" href="final.css" type="text/css">
        </head>
        <body>
-         <h1>
+         <h2>
              Tabo Jain's Store 
-         </h1>
+         </h2>
                <nav>
                 <ul>
                  <li>
@@ -22,21 +22,21 @@
                 </ul>
                </nav>
                 <main>
-               <h2>
+               <h3>
 About Tabo Jain’s Store
-	</h2>
+	</h3>
 	<p>
 Tabo Jain’s Store was created by Tabo Jain and has been up and running since 2011,Dec 21.The Store headquarters is located in Sweden.This store has been funded by CMIS International,Thailand since 2013.The purpose of this store is to just provide the youth of today some entertainment as our products provide entertainment for them.The store’s merchandise that is on display is sold at a lower price than you would find at a mall or market.
         </p>
-	<h3>
+	<h4>
 Products
-	</h3>
+	</h4>
 	<p>
 The products sold here are of the best quality and come straight from the companies that produced the products(i.e sony,samsung,apple,microsoft,etc).Some of the products are headphones,Cellular devices,gaming consoles(Xbox,Pc,etc) and many more items.If you wish to buy the products you can order it on the site and depending on your location we will ship it to you.You may pay through cash on delivery or credit or debit card.
 	</p>
-	<h4>
+	<h5>
 Shipping Details
-	</h4>
+	</h5>
 	<p>
 We ship to Thailand,India,USA,Japan and South Korea and because of our location it takes some time to reach some places.However the shipping price is the same everywhere which is 5.00$ which if you ask me is a pretty great price compared to other sites.
 	</p>
