--- a/final/catalog.html
+++ b/final/catalog.html
@@ -65,8 +65,53 @@
                 <p>
            The ps4 contoller is a custom job and a very unique piece that you will only find here on Tabo Jain's Store.
                 </p>
+<h2>
+Shipping Details
+	</h2>
+	<p>
+We ship to Thailand,India,USA,Japan and South Korea and because of our location it takes some time to reach some places.However the shipping price is the same everywhere which is 5.00$ which if you ask me is a pretty great price compared to other sites.
+	</p>
+	<table border=”1”>
+		<tr>
+                 <td>Numb</td>
+  		 <td colspan=”2”>Area</td>
+  		 <td colspan=”2”>Form of Delivery Avalible</td>
+  		 <td colspan=”2”>Estimated Time</td>
+		</tr>
+		<tr>
+  		 <td rowspan=”2”>1</td>
+  		 <td colspan=”2”>Thailand</td>
+  		 <td colspan=”2”>Ship,Air cargo</td>
+  		 <td colspan=”2”>5 to 7 days</td>
+		</tr>
+		<tr>
+  		 <td rowspan=”2”>2</td>
+  		 <td colspan=”2”>USA</td>
+  		 <td colspan=”2”>Ship</td>
+  		 <td colspan=”2”>8 to 10 days</td>
+ 		</tr>
+		<tr>
+  		 <td rowspan=”2”>3</td>
+  		 <td colspan=”2”>Japan</td>
+  		 <td colspan=”2”>Ship,Air Cargo</td>
+  		 <td colspan=”2”>9 to 12 days</td>
+ 		</tr>
+		<tr>
+  		 <td rowspan=”2”>4</td>
+  	 	 <td colspan=”2”>South korea</td>
+  		 <td colspan=”2”>Air Cargo,Ship</td>
+  		 <td colspan=”2”>11 to 15 days</td>
+ 		</tr>
+		<tr>
+  		 <td rowspan=”2”>5</td>
+  		 <td colspan=”2”>India</td>
+  		 <td colspan=”2”>Air cargo</td>
+  		 <td colspan=”2”>8 days</td>
+ 		</tr>
+		</table>
                </main>
                <footer>
+               @Tabo jain 2015 CMIS-webdesign
                </footer>
        </body>
 </html>
