--- a/final/catalog.html
+++ b/final/catalog.html
@@ -11,6 +11,9 @@
          <header>
               
          </header>
+          <h1>
+	    Store
+	  </h1>
                <nav>
                  <ul>
                   <li>
@@ -145,9 +148,9 @@ $34.50
 <h2>
 Shipping Details
 	</h2>
-	<p>
+	<p1>
 We ship to Thailand,India,USA,Japan and South Korea and because of our location it takes some time to reach some places.However the shipping price is the same everywhere which is 5.00$ which if you ask me is a pretty great price compared to other sites.
-	</p>
+	</p1>
 	<table border=”1”>
 		<tr>
                  <td>Number</td>
@@ -191,7 +194,7 @@ Hope you buy our products and enjoy them to the fullest!!
 </p>
                </main>
                <footer>
-               @Tabo jain 2015 CMIS-webdesign
+               @ 2015 Tabo jain - CMIS Web Design Student
                </footer>
        </body>
 </html>
