--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -6,6 +6,7 @@
     </title>
       <meta charset="utf-8"/>
    </head>
+  <link rel="stylesheet" href="../css/box.css" type="text/css">
    <body>
     <header>
     </header>
