--- a/tables/index.html
+++ b/tables/index.html
@@ -5,7 +5,7 @@
 		<title>
                   HEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEY!
 		</title>
-		<link rel="stylesheet" href="main.css" type="text/css">
+		<link rel="stylesheet" href="../css/box.css" type="text/css">
 	</head>
 	<body>
 		<nav>
