--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -11,11 +11,14 @@
     <header>
     </header>
       <h1>
-    This assignment was about creating a subfolder and adding different links to different websites and adding a link in both index files back to each other very confusing i know deal with it.
+    ListsandLinks
        </h1>
        <p>
          The hardwork isnt wasted this shall help me a lot in the future bye for now..........goodbye!
        </p>
+<h2>
+This assignment was about creating a subfolder and adding different links to different websites and adding a link in both index files back to each other very confusing i know deal with it.
+</h2>
      <ol>
         <li>
           Add a blank gedit index.html file in your repository
@@ -50,10 +53,10 @@
     <nav>
      <ul>
        <li>
-          <a href="..">back to the</a>
+          <a href="..">Home</a>
        </li>
        <li>
-          <a href="../tables">present</a>
+          <a href="../tables">tables</a>
        </li>
        <li>
           <a href="../css/box.css">styles</a>
@@ -80,7 +83,7 @@
      </ul>
     </main>
     <footer>
-         <ul>
+         <ol>
           <li>Create a new folder called "listsandlinks" in your repository folder.
           </li>
           <li>Inside listsandlinks create a file called "index.html" and a file called "main.css"
@@ -99,7 +102,7 @@
 	  </li> 
           <li>Turn in your work.
           </li>
-        </ul>
+        </ol>
     </footer>
    </body>
 </html>
