--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
          <meta charset="utf-8"/>
      </head>
       <body>
-       <header>
-            
+         <div>
+       <header>            
        </header>
 <h1> 
 Welcome to my website!
@@ -17,13 +17,13 @@ Welcome to my website!
        <nav>
          <ul>
           <li>
-            <a href="listsandlinks">future</a>
+            <a href="listsandlinks">Listsandlinks</a>
           </li>
           <li>
-            <a href="tables">present</a>
+            <a href="tables">Tables</a>
           </li>
           <li>
-            <a href="css/box.css">stlyish</a>
+            <a href="css/box.css">Box.css</a>
           </li>
           <li>
             <a href="final">E-commerce website</a>
@@ -64,7 +64,7 @@ In your old index.html, add an article with a heading and a paragraph descriptio
 Turn in your work
          </li>
         </ul>
-       <article>
+       </article>
  <h2>
    Tables
  </h2>
@@ -83,6 +83,8 @@ Create a new folder in your repository called "tables"
          </li>
 	<li>
 Add html code to recreate the webpage below
+        </li>
+       </ul>
        <ul>
          <li>
           second table will require the use of the colspan attribute.
@@ -91,7 +93,7 @@ Add html code to recreate the webpage below
 third table will require the use of the rowspan attribute.
          </li>
       </ul>
-         </li>
+      <ul>
 	<li>
             In your repository index.html file, add an article with a heading, paragraph description and this list of requirements. Also add a link to the tables/index.html file. 
          </li>
@@ -109,5 +111,6 @@ Turn it in.
        <footer>
             This website is being by me for my studies in cmis
        </footer>
+       </div>
       </body>
  </html>
